0.03
 - Add error to init() and prepare() without data.
 - Add tests for cleanup() and init().
 - Fix link to image in doc.

0.02 2024-02-08T22:35:31+01:00
 - Fix label.
 - Regen example.

0.01 2024-02-07T21:01:43+01:00
 - First version.