@@ -5,6 +5,7 @@ SYNOPSIS
      use Tags::HTML::ChangePassword;
 
      my $obj = Tags::HTML::ChangePassword->new(%params);
+     $obj->cleanup;
      $obj->prepare($message_types_hr);
      $obj->init($messages_ar);
      $obj->process;
@@ -69,6 +70,13 @@ METHODS
              }
 
     Returns instance of object.
+
+  "cleanup"
+     $obj->cleanup;
+
+    Process cleanup after page run.
+
+    Returns undef.
 
   "init"
      $obj->init($messages_ar);
