@@ -1,5 +1,6 @@
 0.03
  - Add error to init() and prepare() without data.
+ - Add missing cleanup() method to doc.
  - Add tests for cleanup() and init().
  - Fix link to image in doc.
 
